crates/diffler/src/ui/snapshots/diffler__ui__diff__tests__expand_whole_file_reveals_the_unchanged_lines.snap
---
source: crates/diffler/src/ui/diff.rs
expression: render(&mut app).backend()
---
" Hint: c comment  r reply  v viewed  C comments  ? help                                                                 "
" Files                           Diff                                                                                   "
"▌● notes.txt              +1 -1  modified  notes.txt                                                         +1 -1 █████"
"                                 @@ -1,10 +1,10 @@                                                                      "
"                                    1    1 line 1                                                                       "
"                                    2    2 line 2                                                                       "
"                                    3    3 line 3                                                                       "
"                                    4    4 line 4                                                                       "
"                                ▌   5      line 5                                                                       "
"                                ▌        5 LINE FIVE                                                                    "
"                                    6    6 line 6                                                                       "
"                                    7    7 line 7                                                                       "
"                                    8    8 line 8                                                                       "
"                                    9    9 line 9                                                                       "
"                                   10   10 line 10                                                                      "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" DIFF  fixture@main  mcp off  viewed 0/1 files                                                                          "
