crates/diffler/src/ui/snapshots/diffler__ui__diff__tests__long_diff_lines_wrap_instead_of_clipping.snap
---
source: crates/diffler/src/ui/diff.rs
expression: terminal.backend()
---
" c add comment · r reply · m mark viewed · C see comment list · ? help                                                  "
" Files                           Diff                                                                                   "
" ▾ src                    +1 -1  modified  src/lib.rs                                                        +1 -1 █████"
"▌  ● lib.rs               +1 -1  answer                                                                                 "
" + ci.yml                 +1 -0  @@ -1,3 +1,3 @@                                                                        "
" ○ todo.md                +1 -0     1    1 pub fn answer() -> u32 {                                                     "
"                                ▌   2          41                                                                       "
"                                ▌        2     42 // a very long trailing explanation that cannot possibly fit in the di"
"                                ▌          ff pane at the test terminal widtha very long trailing explanation that canno"
"                                ▌          t possibly fit in the diff pane at the test terminal width                   "
"                                    3    3 }                                                                            "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" DIFF  fixture@main · mcp off · viewed 0/3 files                                                                        "
